poblado inicial para cliente listo
Se crea un usuario por default y se cargan las cosas básicas, sin puntos
limpios

--- a/coplime_client_web/web/index.xhtml
+++ b/coplime_client_web/web/index.xhtml
@@ -46,7 +46,7 @@
                             <p:inputText id="input_password" type="password" value="#{login.password}" required="true"/>
                             
                             <f:facet name="footer">
-                                <p:growl id="msj_error_login"/>
+                                <p:growl id="msj_error_login" sticky="true" />
                                 <p:commandButton styleClass="centrar" value="Iniciar sesión" action="#{login.login()}" update="msj_error_login"/>
                             </f:facet>
                         </p:panelGrid>
