--- a/coplime_client_web/web/pobladoInicial.xhtml
+++ b/coplime_client_web/web/pobladoInicial.xhtml
@@ -19,9 +19,10 @@
                     <p:panelGrid columns="1" styleClass="centrar">
                         <f:facet name="header">Realizar el poblado inicial del sistema</f:facet>
                         <f:attribute name="icon" value="false" />
-                        <p:outputLabel value="Actualmente se crean 3 usuarios (1 de cada tipo), 1 punto limpio y un aviso de incidencia" />
+                        <p:outputLabel value="Acá se configura el sistema inicialmente para su primera ejecución" />
                         <f:facet name="footer">
                             <p:commandButton value="Poblar" action="#{pobladoInicial.poblar()}"/>
+                            <p:commandButton value="Poblar en modo testing" action="#{pobladoInicial.poblarTesting()}"/>
                         </f:facet>
                     </p:panelGrid>
                 </h:form>
