--- a/coplime_client_web/web/users/admin/editarContenedor.xhtml
+++ b/coplime_client_web/web/users/admin/editarContenedor.xhtml
@@ -59,7 +59,8 @@
                         <p:outputLabel value="Contenedores agregados: #{mantenedorPuntoLimpioEditarContMB.listaContenedores.size()}"/>
                         <p:dataTable value="#{mantenedorPuntoLimpioEditarContMB.listaContenedores}" var="contenedor" 
                                      emptyMessage="No ha agregado contenedores a este punto limpio">
-
+                            <f:facet name="header">Listado de contenedores</f:facet>
+                            
                             <p:column headerText="Material" >
                                 <h:outputText value="#{contenedor.nombreMaterial}"/>
                             </p:column>
