--- a/coplime_client_web/web/users/admin/agregarPuntoLimpio.xhtml
+++ b/coplime_client_web/web/users/admin/agregarPuntoLimpio.xhtml
@@ -58,7 +58,8 @@
                         <p:outputLabel value="Contenedores agregados: #{mantenedorPuntoLimpioAgregarMB.listaContenedores.size()}"/>
                         <p:dataTable value="#{mantenedorPuntoLimpioAgregarMB.listaContenedores}" var="contenedor" 
                                      emptyMessage="No ha agregado contenedores a este punto limpio">
-
+                            <f:facet name="header">Listado de contenedores</f:facet>
+                            
                             <p:column headerText="Material" >
                                 <h:outputText value="#{contenedor.nombreMaterial}"/>
                             </p:column>
