--- a/coplime_client_web/web/mainTemplate.xhtml
+++ b/coplime_client_web/web/mainTemplate.xhtml
@@ -47,7 +47,7 @@
                     <h:outputLink value="#{request.contextPath}/faces/users/verOperariosMantencion.xhtml">Ver operarios de mantención</h:outputLink>
                     <h:outputLink value="#{request.contextPath}/faces/users/verInspectores.xhtml">Ver inspectores</h:outputLink>
                     <h:outputLink value="#{request.contextPath}/faces/users/admin/generarReporte.xhtml">Generar reportes</h:outputLink>
-                    <h:outputLink >Ayuda</h:outputLink>
+                    <h:outputLink value="#{request.contextPath}/faces/users/ayuda.xhtml">Ayuda</h:outputLink>
                     <h:commandLink action="#{autenticadorMB.logout()}">Cerrar sesión</h:commandLink>
                 </p:panelGrid>
             </h:form>
@@ -71,7 +71,7 @@
                     <h:outputLink value="#{request.contextPath}/faces/users/verInspectores.xhtml">Ver inspectores</h:outputLink>
                     <h:outputLink value="#{request.contextPath}/faces/users/inspector/agregarRevisionPuntoLimpio.xhtml">Agregar revisión de punto limpio</h:outputLink>
                     <h:outputLink value="#{request.contextPath}/faces/users/inspector/solicitarMantencionPuntoLimpio.xhtml">Solicitar una mantención de punto limpio</h:outputLink>
-                    <h:outputLink >Ayuda</h:outputLink>
+                    <h:outputLink value="#{request.contextPath}/faces/users/ayuda.xhtml">Ayuda</h:outputLink>
                     <h:commandLink action="#{autenticadorMB.logout()}">Cerrar sesión</h:commandLink>
                 </p:panelGrid>
             </h:form>
@@ -97,7 +97,7 @@
                     <h:outputLink value="#{request.contextPath}/faces/users/verOperariosMantencion.xhtml">Ver operarios de mantención</h:outputLink>
                     <h:outputLink value="#{request.contextPath}/faces/users/verInspectores.xhtml">Ver inspectores</h:outputLink>
                     <h:outputLink value="#{request.contextPath}/faces/users/operario/agregarMantencionPuntoLimpio.xhtml">Agregar mantención de punto limpio</h:outputLink>
-                    <h:outputLink >Ayuda</h:outputLink>
+                    <h:outputLink value="#{request.contextPath}/faces/users/ayuda.xhtml">Ayuda</h:outputLink>
                     <h:commandLink action="#{autenticadorMB.logout()}">Cerrar sesión</h:commandLink>
                 </p:panelGrid>
             </h:form>
