quitada propiedad desconocida de panelGrid

--- a/coplime_client_web/web/users/admin/generarReporte.xhtml
+++ b/coplime_client_web/web/users/admin/generarReporte.xhtml
@@ -18,7 +18,7 @@
             
             <ui:define name="centro">
                  <h:form>
-                     <p:panelGrid columns="2" styleClass="centrar" cellpadding="10" id="todoElPanel">
+                     <p:panelGrid columns="2" styleClass="centrar" id="todoElPanel">
                          <f:facet name="header">¿Cómo desea el reporte?</f:facet>
                          
                         <p:outputLabel for="selectTipoReporte" value="Seleccione el tipo de reporte"/>
