Arreglos de último minuto al camino feliz

--- a/coplime_client_web/web/mainTemplate.xhtml
+++ b/coplime_client_web/web/mainTemplate.xhtml
@@ -60,7 +60,7 @@
                     <h:outputLink value="#{request.contextPath}/faces/users/verPuntosLimpios.xhtml">Ver puntos limpios</h:outputLink>
                     <h:outputLink value="#{request.contextPath}/faces/users/verNotificaciones.xhtml">Ver notificaciones
                         <h:outputText id="txt_num_notif" styleClass="ui-li-count" value="(#{notificacionesManagedBeans.cantidadNotificaciones})"/>
-                        <p:poll interval="30" autoStart="true" listener="#{notificacionesManagedBeans.refresNotificaciones(null)}" update="txt_num_notif"/>
+                        <p:poll interval="10" autoStart="true" listener="#{notificacionesManagedBeans.refresNotificaciones(null)}" update="txt_num_notif"/>
                     </h:outputLink>
                     <h:outputLink value="#{request.contextPath}/faces/users/verSolicitudesMantencion.xhtml">Ver solicitudes de mantención</h:outputLink>
                     <h:outputLink value="#{request.contextPath}/faces/users/verRevisiones.xhtml">Ver revisiones de puntos limpios</h:outputLink>
@@ -84,11 +84,11 @@
                     <h:outputLink value="#{request.contextPath}/faces/users/verPuntosLimpios.xhtml">Ver puntos limpios</h:outputLink>
                     <h:outputLink value="#{request.contextPath}/faces/users/verNotificaciones.xhtml">Ver notificaciones
                         <h:outputText id="txt_num_notif" styleClass="ui-li-count" value="(#{notificacionesManagedBeans.cantidadNotificaciones})"/>
-                        <p:poll interval="30" autoStart="true" listener="#{notificacionesManagedBeans.refresNotificaciones(null)}" update="txt_num_notif"/>
+                        <p:poll interval="10" autoStart="true" listener="#{notificacionesManagedBeans.refresNotificaciones(null)}" update="txt_num_notif"/>
                     </h:outputLink>
                     <h:outputLink value="#{request.contextPath}/faces/users/verSolicitudesMantencion.xhtml">Ver solicitudes de mantención
                         <h:outputText id="txt_num_solic" styleClass="ui-li-count" value="(#{solicitudesManagedBeans.cantidadSolicitudes})"/>
-                        <p:poll interval="30" autoStart="true" listener="#{solicitudesManagedBeans.refresSolicitudesMantencion(null)}" update="txt_num_solic"/>
+                        <p:poll interval="10" autoStart="true" listener="#{notificacionesManagedBeans.refresSolicitudesMantencion(null)}" update="txt_num_solic"/>
                     </h:outputLink>
                     <h:outputLink value="#{request.contextPath}/faces/users/verMantenciones.xhtml">Ver mantenciones de puntos limpios</h:outputLink>
                     <h:outputLink value="#{request.contextPath}/faces/users/verOperariosMantencion.xhtml">Ver operarios de mantención</h:outputLink>
