mensajes feedback al no poder eliminar en config

--- a/coplime_client_web/web/pobladoInicial.xhtml
+++ b/coplime_client_web/web/pobladoInicial.xhtml
@@ -22,7 +22,8 @@
                         <p:outputLabel value="Acá se configura el sistema inicialmente para su primera ejecución" />
                         <f:facet name="footer">
                             <p:commandButton value="Poblar" action="#{pobladoInicial.poblar()}"/>
-                            <p:commandButton value="Poblar en modo testing" action="#{pobladoInicial.poblarTesting()}"/>
+                            <p:commandButton value="Poblar en modo testing" action="#{pobladoInicial.poblarTesting()}"
+                                             rendered="true"/>
                         </f:facet>
                     </p:panelGrid>
                 </h:form>
