ajustes para grabar CD

--- a/coplime_client_web/web/pobladoInicial.xhtml
+++ b/coplime_client_web/web/pobladoInicial.xhtml
@@ -23,7 +23,7 @@
                         <f:facet name="footer">
                             <p:commandButton value="Poblar" action="#{pobladoInicial.poblar()}"/>
                             <p:commandButton value="Poblar en modo testing" action="#{pobladoInicial.poblarTesting()}"
-                                             rendered="true"/>
+                                             rendered="false"/>
                         </f:facet>
                     </p:panelGrid>
                 </h:form>
